Update : optimize