@@ -13,7 +13,7 @@
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
         <javafx.version>23</javafx.version>
-        <jackson.version>2.13.0</jackson.version>
+        <jackson.version>2.13.4.2</jackson.version>
     </properties>
 
     <dependencies>
@@ -61,6 +61,12 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.vpstycoon.GameApplication</mainClass>
+                    <options>
+                        <option>--module-path</option>
+                        <option>${env.JAVAFX_HOME}/lib</option>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml,javafx.media</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
